Fixed header spacing

--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ header {
 }
 
 nav {
-	padding:20px 10px 0 10px;
+	padding:22px 10px 0 10px;
 }
 
 	nav ul {
